--- a/package.json
+++ b/package.json
@@ -2,18 +2,37 @@
   "name": "wow-profession-profits",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "simple-oauth2": "^4.3.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.12.10",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.15.0",
+    "webpack-cli": "^4.3.1"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack",
+    "build:dev": "npm run build -- --watch --mode=development",
+    "start-server": "nodemon server/server.js -e html,js,scss,css --ignore public",
+    "start:dev": "npm run build:dev & npm run start-server",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
