--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "simple-oauth2": "^4.3.0",
