--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.2",
     "simple-oauth2": "^4.3.0",
     "web-vitals": "^2.1.4"
   },
